# rainMcp

./: .oxfmtrc.jsonc  .oxlintrc.json  .prettierignore  AGENTS.md  README.md  index.html  knip.json  package.json  uno.config.ts  vite.config.ts
.github/workflows/: release.yml
docs/: codex.md  cursor.md  getting-started.md  icon-generation.md  kiro.md  roo-code.md  trae.md  windsurf.md
docs/agents/: alma.md  claude-code.md  claude-desktop.md  cline.md  comate.md  copilot-cli.md  cursor.md  gemini-cli.md  kiro.md  opencode.md  vscode-copilot.md  windsurf.md
scripts/: generate-types.ts
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: add-server.json  common.json  default.json
src-tauri/examples/: generate_schema.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  window.rs
src-tauri/src/agent/: chat.rs  mod.rs  tools.rs  types.rs
src-tauri/src/mcp/: agent.rs  agent_config.rs  mod.rs  parser.rs  paths.rs  registry.rs  server_schema.rs  user_server.rs
src-tauri/src/mcp/agent_adapters/: common.rs  json_adapter.rs  mod.rs  opencode_adapter.rs  toml_adapter.rs
src-tauri/src/mcp/tests/: add_server_to_agent_tests.rs  app_config_tests.rs  enabled_agents_tests.rs  fixtures.rs  get_config_tests.rs  get_server_raw_config_tests.rs  get_supported_agents_tests.rs  mod.rs  opencode_adapter_tests.rs  schema_store_tests.rs  update_config_tests.rs  user_servers_tests.rs
src/api/: tauri.ts
src/components/: TestComponent.vue
src/components/agents/: AgentIcon.vue  AgentItem.vue  AgentList.vue
src/components/chat/: ChatInput.vue  ChatMessageBubble.vue  ChatSchemaCard.vue  ChatToolCall.vue
src/components/layout/: MainLayout.vue  Sidebar.vue  UpdateNotification.vue
src/components/mcp/: AgentDetail.vue  McpServerCard.vue
src/composables/: useAddServerWindow.ts
src/router/: index.ts
src/stores/: agents.ts  app.ts  servers.ts  theme.ts
src/styles/: globals.css  reset.css
src/types/: generated.ts  mcp.ts
src/utils/: logger.ts
src/views/: AgentsOverviewView.vue  ServersOverviewView.vue  ServersView.vue
(+39 files in other folders)
