[package]
name = "rain-mcp"
version = "0.2.1"
description = "MCP configuration manager for coding agents"
authors = ["shellraining"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rain_mcp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-decorum = "1.1.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
schemars = "0.8"
dirs = "6.0.0"
open = "5.3.3"
tauri-plugin-clipboard-manager = "2.3.2"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
semver = "1.0"

[dev-dependencies]
tempfile = "3"
rstest = "0.23"
